--- a/public/html/enter-key.html
+++ b/public/html/enter-key.html
@@ -2,8 +2,8 @@
  * @Author: 杨仕明 shiming.y@qq.com
  * @Date: 2024-05-25 19:04:07
  * @LastEditors: 杨仕明 shiming.y@qq.com
- * @LastEditTime: 2024-05-25 19:04:20
- * @FilePath: /wecom_worktool_backend/public/enter-key.html
+ * @LastEditTime: 2024-05-28 12:11:27
+ * @FilePath: /wecom_worktool_backend/public/html/enter-key.html
  * @Description: 
  * 
  * Copyright (c) 2024 by ${git_name_email}, All Rights Reserved. 
@@ -36,7 +36,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        input[type="text"] {
+        input[type="password"] {
             width: 80%;
             padding: 10px;
             margin: 10px 0;
@@ -63,7 +63,7 @@
     <div class="container">
         <h2>Enter Key</h2>
         <form action="/set-key" method="post">
-            <input type="text" name="key" placeholder="Enter key" required>
+            <input type="password" name="key" placeholder="Enter key" required>
             <button type="submit">Submit</button>
         </form>
     </div>
