--- a/public/html/logs.html
+++ b/public/html/logs.html
@@ -2,8 +2,8 @@
  * @Author: 杨仕明 shiming.y@qq.com
  * @Date: 2024-05-25 19:28:14
  * @LastEditors: 杨仕明 shiming.y@qq.com
- * @LastEditTime: 2024-05-25 23:02:41
- * @FilePath: /wecom_worktool_backend/public/logs.html
+ * @LastEditTime: 2024-05-29 04:33:37
+ * @FilePath: /wecom_worktool_backend/public/html/logs.html
  * @Description: 
  * 
  * Copyright (c) 2024 by ${git_name_email}, All Rights Reserved. 
@@ -108,6 +108,8 @@
         <div class="refresh-container">
             <label for="refreshRate">刷新频率：</label>
             <select id="refreshRate" onchange="setRefreshRate()">
+                <option value="500">0.5秒</option>
+                <option value="1000">1秒</option>
                 <option value="2000">2秒</option>
                 <option value="5000" selected>5秒</option>
                 <option value="10000">10秒</option>
